# Monte-Carlo-Raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: CI.yml
resources/: samplescene.tga
source/: Camera.h  Image.h  Ray.h  Scene.h  Surface.cpp  Surface.h  Util.h  main.cpp
